[package]
name = "rally-point-relay"
description = "Validating netcode v2 relay: command validation, mesh + dedup, per-turn consensus, replicated turn log, and flight recorder."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
rally-point-proto = { workspace = true }
rally-point-transport = { workspace = true }
parking_lot = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
ring = { workspace = true }
thiserror = { workspace = true }
# `signal` (on top of the workspace features) for the coordinated-drain shutdown
# path: ctrl_c everywhere, plus SIGTERM on Linux/Fargate.
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# PEM cert/key file parsing for --cert/--key.
rustls-pemfile = { workspace = true }
# Self-signed cert generation for dev/loopback (when --cert/--key aren't
# supplied). Uses ring, not the default aws-lc-rs, to match the pinned QUIC
# crypto provider — no NASM toolchain needed.
rcgen = { workspace = true }
hex = { workspace = true }
# WebSocket client for the relay's persistent control connection to the
# coordinator (descriptors down today, liveness up later).
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
# JSON codec for the control-connection messages.
serde_json = { workspace = true }
# Serialize/Deserialize derives for the flight recorder's blob envelope.
serde = { workspace = true }
