[package]
name = "rally-point-relay"
description = "Validating netcode v2 relay: command validation, mesh + dedup, per-turn consensus, replicated turn log, and flight recorder."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
rally-point-proto = { workspace = true }
rally-point-transport = { workspace = true }
parking_lot = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
ring = { workspace = true }
thiserror = { workspace = true }
# `signal` (on top of the workspace features) for the coordinated-drain shutdown
# path: ctrl_c everywhere, plus SIGTERM on Linux/Fargate.
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# PEM cert/key file parsing for --cert/--key.
rustls-pemfile = { workspace = true }
# Self-signed cert generation for dev/loopback (when --cert/--key aren't
# supplied). Uses ring, not the default aws-lc-rs, to match the pinned QUIC
# crypto provider — no NASM toolchain needed.
rcgen = { workspace = true }
hex = { workspace = true }
# WebSocket client for the relay's persistent control connection to the
# coordinator (descriptors down today, liveness up later).
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
# JSON codec for the control-connection messages.
serde_json = { workspace = true }
# Serialize/Deserialize derives for the flight recorder's blob envelope.
serde = { workspace = true }
# RFC 3339 parsing for the ECS stats provider's `read`/`preread` sample clock.
time = { workspace = true }
# The task-stats reporter's client for the ECS Task Metadata endpoint
# (link-local, plain HTTP). Same hyper + hyper-util stack the coordinator's webhook
# client and the loadgen's create client already build on. hyper-rustls adds the
# HTTPS the flight-recording upload client needs to PUT a compressed recording to
# the coordinator's presigned object-store URL (https:// in prod, http:// in a
# loopback test); ring provider, keeping the ring-only / aws-lc-rs-free pin intact.
bytes = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
hyper-rustls = { workspace = true }
http-body-util = { workspace = true }
# Compresses each flushed flight recording before uploading it to the object store.
zstd = { workspace = true }

[dev-dependencies]
# The end-to-end provisioning test stands up a ledger-backed coordinator in-process
# and drives its reconcile loop against this crate's real relay binary (reached via
# CARGO_BIN_EXE_rally-point-relay). This is a dev-dependency cycle — the coordinator
# already dev-depends on this crate — which cargo permits, since dev-dependencies do
# not feed the library build graph.
rally-point-coordinator = { path = "../coordinator" }
# Serves that in-process coordinator's HTTP router in the test.
axum = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "hot_paths"
harness = false
