[package]
name = "rally-point-transport"
description = "Per-leg reliable delivery over unreliable QUIC datagrams (ack manager + sequence buffer), shared by the client and relay."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
rally-point-proto = { workspace = true }
# Used to measure the encoded size of wire messages when sizing a datagram's
# redundancy bundle, and for the `Message` trait on the generated types.
prost = { workspace = true }
thiserror = { workspace = true }
