[package]
name = "rally-point-transport"
description = "Per-link reliable delivery over unreliable QUIC datagrams (ack manager + sequence buffer), shared by the client and relay."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
rally-point-proto = { workspace = true }
# Used to measure the encoded size of wire messages when sizing a datagram's
# redundancy bundle, and for the `Message` trait on the generated types.
prost = { workspace = true }
thiserror = { workspace = true }
# The QUIC stack the per-link transport runs on, plus its TLS config. Pinned to
# the ring crypto provider so this (and the client that links it) builds for the
# 32-bit game DLL without a C/NASM toolchain.
quinn = { workspace = true }
rustls = { workspace = true }

[dev-dependencies]
# Test runtime + self-signed certs for the loopback QUIC tests.
tokio = { workspace = true }
rcgen = { workspace = true }
